--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,8 @@
     background-color: aquamarine;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+h1 {
+    color:antiquewhite;
+    background-color: darkcyan;
+}
